[package]
name = "riff"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kalley/riff"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = "0.29"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tempfile = "3.0"
dirs = "5.0"
serde_json = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
